@@ -15,3 +15,4 @@ copy "port_blacklist.txt" "HttTToV2\port_blacklist.txt"
 copy "regiment_costs.txt" "HttTToV2\regiment_costs.txt"
 copy "starting_factories.txt" "HttTToV2\starting_factories.txt"
 copy "leader_traits.txt" "HttTToV2\leader_traits.txt"
+copy "merge_nations.txt" "HttTToV2\merge_nations.txt"
