@@ -24,6 +24,7 @@ vector<string> processBlockedNations(Object* obj);
 typedef map< string, string > countryMapping;	// < sourceCountry, destCountry>
 int initCountryMap(countryMapping& mapping, vector<string> EU3Tags, vector<string> V2Tags, vector<string> blockedNations, Object* rulesObj);
 vector<string>	getEU3Tags(EU3World& srcWorld);
+void mergeNations(EU3World&, Object* mergeObj);
 void uniteJapan(EU3World&);
 void removeEmptyNations(EU3World&);
 void removeDeadLandlessNations(EU3World&);
