@@ -1,0 +1,156 @@
+merge_nations =
+{
+	### Merging the Daimyos of Japan
+
+	# This entry is unique for automatically mapping daimyos into Japan.
+	# Daimyos are detected specifically, merge into JAP, and default to merging.
+
+	merge_daimyos = yes
+
+
+
+	### Merging other nations
+
+	# You may add your own entries here if you wish, or find the ones you like and set "merge = yes".
+	# Each entry contains ONE master and N slave tags, and a "merge" statement which can be "yes" (enabled) or "no" (disabled).
+	# ALL TAGS ARE EU3 TAGS!  Merging is done BEFORE conversion!  "master" should have a one-to-one mapping for best results.
+
+	france =
+	{
+		merge = no	# Change to yes to enable merging
+
+		master = FRA
+		slave = ALS	# Alsace
+		slave = AMG	# Armagnac
+		slave = AUV	# Auvergne
+		slave = AVI	# Avignon
+		slave = BOU	# Bourbonnais
+		slave = BRI	# Brittany
+		slave = BUR	# Burgundy
+		slave = CHP	# Champagne
+		slave = DAU	# Dauphine
+		slave = FOI	# Foix
+		slave = FRA	# France (proper)
+		slave = GUY	# Guyenne
+		slave = NEV	# Nevers
+		slave = NRM	# Normandy
+		slave = ORL	# Orleans
+		slave = PRO	# Provence
+		slave = RFR	# Revolutionary France (proper)
+		slave = TOU	# Toulouse
+		slave = BER	# Berry
+
+		# Uncomment these lines to include Corsica and/or Savoy in merged France
+		# slave = COR	# Corsica
+		# slave = SAV	# Savoy
+	}	
+
+	ireland =
+	{
+		merge = no	# Change to yes to enable merging
+
+		master = IRE
+		slave = CNN	# Connacht
+		slave = LEI	# Leinster
+		slave = IRE	# Ireland (proper)
+		slave = MNS	# Munster (Ireland, not Germany)
+		slave = TYR	# Tyrone
+	}
+
+	spain =
+	{
+		merge = no	# Change to yes to enable merging
+
+		master = SPA
+		slave = CAS	# Castille
+		slave = GAL	# Galicia
+		slave = GRA	# Granada
+		slave = NAV	# Navarra
+		slave = SPA	# Spain (proper)
+
+		# Uncomment these lines to include Aragon/Catalunya in merged Spain
+		# slave = ARA	# Aragon
+		# slave = CAT	# Catalunya
+	}
+
+	holland =
+	{
+		merge = no	# Change to yes to enable merging
+
+		master = NED
+		slave = FRI	# Friesland
+		slave = GEL	# Gelre
+		slave = HAI	# Hainaut
+		slave = HOL	# Holland
+		slave = NED	# The Netherlands (proper)
+		slave = UTR	# Utrecht
+
+		# Uncomment these lines to include Brabant and Flanders in merged Netherlands
+		# slave = BRB	# Brabant
+		# slave = FLA	# Flanders
+	}
+
+	russia =
+	{
+		merge = no	# Change to yes to enable merging
+
+		master = RUS
+		slave = AST	# Astrakhan
+		slave = GOL	# Golden Horde
+		slave = KAZ	# Kazan
+		slave = MOS	# Muscowy
+		slave = NOV	# Novgorod
+		slave = PSK	# Pskov
+		slave = QAS	# Qasim Khanate
+		slave = RUS	# Russia (proper)
+		slave = TVE	# Tver
+		slave = YAR	# Yaroslavl
+		slave = NOG	# Nogai
+		slave = SIB	# Sibir
+		slave = PLT	# Polotsk
+
+		# Uncomment these lines to include Georgia and Armenia in merged Russia
+		# slave = GEO	# Georgia
+		# slave = ARM	# Armenia
+	}
+
+	ukraine =
+	{
+		merge = no	# Change to yes to enable merging
+
+		master = UKR
+		slave = CRI	# Crimea
+		slave = UKR	# Ukraine (proper)
+		slave = ZAZ	# Zaporozhie
+	}
+
+	persia =
+	{
+		merge = no	# Change to yes to enable merging
+
+		master = PER
+		slave = DUR	# Durrani
+		slave = KHO	# Khorasan
+		slave = PER	# Persia (proper)
+		slave = QAR	# Qara Koyunlu
+		slave = TIM	# The Timurids
+	}
+
+	morocco =
+	{
+		merge = no	# Change to yes to enable merging
+
+		master = MOR
+		slave = FEZ	# Fez
+		slave = MOR	# Morocco (proper)
+	}
+
+	metis =
+	{
+		merge = no	# Change to yes to enable merging
+
+		master = IRO
+		slave = IRO	# Iroquois
+		slave = HUR	# Huron
+	}
+}
