@@ -283,3 +283,4 @@ Revision	Version Updated		Log Message
 261		C++			Improve diagnostic output from country mapper.  Add and improve various country mappings.
 262		C++			Additional country mapping improvements.
 263		C++			Restrict USA tag to explicit mappings only.  Many events don't work properly if USA is not in North America.
+264		C++			Abstract and improve Daimyo-merging logic.  Add capability for user-defined nation merging (see merge_nations.txt).
